# ngfw-edl-server

./: .flaskenv  .gitignore  .pre-commit-config.yaml  .quartenv  Containerfile  Containerfile.builder  README.md  _build.py  build.py  gunicorn.conf.py  pyproject.toml
.github/workflows/: main.yaml  pre-commit.yaml
src/ngfw_edl_server/: __init__.py  default_settings.py  dns.py  log_config.py  server.py
tests/: test_container.py  test_dummy.py  test_server.py
