[project]
name = "ngfw-edl-server"
version = "0.1.0.dev"
description = "External Dynamic List server for Next-Generation Firewalls"
authors = [
    {name = "Sam Morris", email = "sam@robots.org.uk"},
]
classifiers = [
    "Private :: Do Not Upload",
]
requires-python = ">=3.12"
dependencies = [
    "aioprometheus[quart]>=23.12.0",
    "dnspython>=2.7.0",
    "quart>=0.19.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
production = [
    "setproctitle>=1.3.3",
    "uvicorn-worker>=0.2.0",
]

[tool.mypy]
strict = true
packages = "ngfw_edl_server"

[[tool.mypy.overrides]]
module = "logging_tree"
ignore_missing_imports = true

[tool.pylint.'MESSAGES CONTROL']
jobs = 0
reports = false
score = false
py-version = 3.12
disable= "line-too-long, missing-function-docstring, missing-class-docstring, missing-module-docstring, invalid-name"

[tool.uv]
dev-dependencies = [
    "dnslib>=0.9.0",
    "logging-tree>=1.10",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-httpserver>=1.1.0",
    "python-dotenv>=1.0.1",
    "trustme>=1.2.0",
    "requests>=2.32.3",
    "pylint>=3.3.1",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--strict-markers",
    "-m", "not container",
]
markers = [
    "container: include tests in container test suite"
]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"  # remove once this becomes the new default

[tool.bandit]
targets = ["src"]

[tool.ruff]
target-version = "py312"

[tool.pytest.run]
source_pkgs = ["ngfw_edl_server"]
